@@ -282,3 +282,15 @@ end
 Then(/^the text for h6 (\d+) should be "([^"]*)"$/) do |h6_num, text|
   expect(@elements[h6_num.to_i - 1].text).to eql text
 end
+
+When(/^I select the paragraphs with class "([^"]*)"$/) do |class_name|
+  @elements = @page.paragraph_elements(:class => class_name)
+end
+
+Then(/^I should have (\d+) paragraphs$/) do |num_paragraphs|
+  expect(@elements.size).to eql num_paragraphs.to_i
+end
+
+Then(/^the text for paragraph (\d+) should be "([^"]*)"$/) do |paragraph_num, text|
+  expect(@elements[paragraph_num.to_i - 1].text).to eql text
+end
